--- a/src/index.html
+++ b/src/index.html
@@ -13,14 +13,22 @@
 </head>
 <body class="bg-light">   
       <!-- Page Content -->
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <h1 class="h2 mt-5">Cast Casket</h1>
-            <p class="lead">search tv shows and movies and see who is dead or alive</p>
-            <input type="text" id="search">
-          </div>
-        </div>
+
+
+          <section class="jumbotron text-center">
+            <div class="container">
+              <h1 class="jumbotron-heading">CastCasket.com</h1>
+              <h4 class="text-muted">Are you watching dead people?</h4>
+              <p class="lead text-muted">Quickly search TV shows and Movies and check if cast members are still among the living.</p>
+              <p>
+                <input type="text" id="search">
+              </p>
+              <p id="peopleperson">
+                
+              </p>
+            </div>
+          </section>
+      <div class="container no-gutter">
         <div class="row">
             <h4 class="totalresults-container d-none justify-content-between align-items-center mb-3">
                 <span class="text-muted">Results</span>
