--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <script src="js/app.js"></script>
     <link rel="stylesheet" href="css/site.css">
 </head>
-<body class="bg-light">   
+<body class="d-flex flex-column">   
       <!-- Page Content -->
 
 
@@ -28,7 +28,7 @@
               </p>
             </div>
           </section>
-      <div class="container no-gutter">
+      <div class="page-content container no-gutter">
         <div class="row">
             <h4 class="totalresults-container d-none justify-content-between align-items-center mb-3">
                 <span class="text-muted">Results</span>
